# sol2cairo

./: .gitignore  .oi  Cargo.toml  Makefile  README.md
contracts/: Contract.sol
docs/: design.md
src/: Contract.sol  main.rs  mods.rs
src/mods/ast/: custom_error.rs  enum.rs  event.rs  function.rs  lib_implementation.rs  mapping.rs  struct.rs  variable.rs
src/mods/constants/: constants.rs
src/mods/errors/: error.rs
src/mods/functions/controllers/: parser.rs  process_file_contents.rs  sub_main.rs
src/mods/functions/helpers/: global.rs
src/mods/lexer/: lexer.rs  tokens.rs
src/mods/parser/: custom_error.rs  enum.rs  event.rs  function.rs  lib_implementation.rs  mapping.rs  struct.rs  variable.rs
src/mods/types/: compiler_errors.rs  context.rs  line_descriptors.rs  token.rs
src/mods/types/identifiers/: custom_error.rs  enum.rs  enum_identifier.rs  event.rs  lib_implementation.rs  mapping.rs  struct.rs  variable.rs
src/mods/utils/functions/: global.rs  process_file_contents.rs  sub_main.rs  value.rs  variant.rs
src/mods/utils/types/: context.rs  line_descriptors.rs  mutability.rs  value.rs  variant.rs  visibility.rs
