[package]
name = "pydeC"
version = "0.1.0"
edition = "2021"
authors = ["Victor Samuel <zarah.zrh2@gmail.com>"]
description = ""
license = "Apache-2.0"
repository = "https://github.com/paradigmxyz/solar"
keywords = ["ethereum", "solidity", "solc", "compiler"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0.4.3"
hex = "0.4"
regex = "1.10.2"
tokio = { version = "1.36.0", features = [
    "fs",
    "macros",
    "rt",
    "rt-multi-thread",
] }
